--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,6 @@
 body {
+  min-width: 400px;
+  min-height: 500px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
