--- a/client/src/styles/Results.css
+++ b/client/src/styles/Results.css
@@ -39,7 +39,7 @@
 
 .button {
   border: none;
-  color: grey;
+  color: #525252;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -47,4 +47,10 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+.circle {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
