--- a/client/src/styles/FAQPage.css
+++ b/client/src/styles/FAQPage.css
@@ -17,6 +17,8 @@
 }
 
 .FAQHeader {
+    font-family: 'Apple Chancery';
+    font-size: 25px;
     text-align: center;
     color: #1F4681;
     padding-top: 10px;
