--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -1,8 +1,9 @@
 .Title {
     color: white;
-    font-family: 'Times New Roman';
-    font-size: 35px;
+    font-family: 'Apple Chancery';
+    font-size: 40px;
     text-align: center;
+    padding-top: 10px;
     padding-right: 10px;
 }
 
