updated font & new logo

--- a/client/src/styles/ProcessResults.css
+++ b/client/src/styles/ProcessResults.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Vollkorn');
+
 .ResultsButton {
     background-color: white;
     border: 2px solid #90D4D9;
@@ -6,7 +8,7 @@
     padding: 10px 20px;
     margin: 20px;
     font-size: 20px;
-    font-family: 'Apple Chancery';
+    font-family: 'Vollkorn';
     text-align: center;
     transition-duration: 0.4s;
 }
@@ -29,7 +31,7 @@
     padding: 10px 20px;
     margin: 20px;
     font-size: 20px;
-    font-family: 'Apple Chancery';
+    font-family: 'Vollkorn';
     text-align: center;
     transition-duration: 0.4s;
 }
