--- a/client/src/styles/Results.css
+++ b/client/src/styles/Results.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Vollkorn');
+
 .App {
-    font-family: 'Apple Chancery';
+    font-family: 'Vollkorn';
     text-align: center;
 }
 
